# grokking-velocity-hodge

./: .gitignore  LICENSE  README.md  VERBATIM_AUDIT.md  paper.tex  pyproject.toml  references.bib
.github/workflows/: ci.yml
reproducibility/: PROVENANCE.md  README.md  requirements.txt
reproducibility/Grokking/Analysis/: 01_velocity_hodge.py  02_effdim_pca.py  03_eigenvalues.py  04_resolvent_bw.py  05_heat_kernel.py  07_circular_coords.py  09_probe_subset_robustness.py  10_event_study.py  11_hodge_robustness.py
reproducibility/Grokking/Pipelines/: main_charts.py  seed_sweep.py
reproducibility/Grokking/Training/: 01_train_reproducible.py
reproducibility/Grokking/Validation/: 01_synthetic_hodge.py  02_verify_bw_provenance.py
reproducibility/Grokking/config/: seed_sweep.json
reproducibility/Shared/: grokking_control_helpers.py  grokking_seed_sweep_helpers.py  grokking_summary_helpers.py  pipeline_helpers.py  runtime.py
reproducibility/tests/: test_core.py  test_hodge_calibration.py  test_robustness.py  test_script_imports.py
src/grokking_velocity_hodge/: __init__.py  calibration.py  config.py  controls.py  pipeline.py  provenance.py  robustness.py  runtime.py  seed_sweep.py  summary.py
